changed blog and corrected text in bibaho and boubhat

--- a/main.css
+++ b/main.css
@@ -82,7 +82,7 @@ blockquote {
 }
 
 .hero-section.bridal-party {
-  background-image: url("http://uploads.webflow.com/575d00af09a5a7a9116bacfa/575da4a609a5a7a9116c2c62_Photo-4.jpg");
+  background-image: url("images/IMG_2808.JPG");
 }
 
 .hero-overlay-section {
