--- a/main.css
+++ b/main.css
@@ -85,6 +85,13 @@ blockquote {
   background-image: url("images/IMG_2808.JPG");
 }
 
+.timer {
+  padding-top: 300px;
+  padding-bottom: 220px;
+  background-color: rgba(0, 0, 0, .2);
+}
+
+
 .hero-overlay-section {
   padding-top: 300px;
   padding-bottom: 220px;
