--- a/main.css
+++ b/main.css
@@ -988,7 +988,7 @@ ul#example li.seperator {
   display: inline-block;
   margin-top: 10px;
   padding-left: 20px;
-  background-image: url("https://www.iconsdb.com/icons/preview/white/apple-xxl.png");
+  background-image: url("images/apple.png");
   background-position: 0px 50%;
   background-size: 15px;
   background-repeat: no-repeat;
