--- a/main.css
+++ b/main.css
@@ -226,7 +226,7 @@ blockquote {
 
 .hero-section {
   width: 100%;
-  background-image: url("images/DSC0402.jpg");
+  background-image: url("images/loading_page.jpg");
   /* background-position: 50% 45%; */
   background-size:  cover;
   margin:0 auto;
